--- a/plant-disease-detection/package.json
+++ b/plant-disease-detection/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-toastify": "^11.0.5",
     "spark-md5": "^3.0.2"
   },
   "devDependencies": {
